--- a/Liveability/Base.lproj/Main.storyboard
+++ b/Liveability/Base.lproj/Main.storyboard
@@ -48,11 +48,38 @@
                     <navigationItem key="navigationItem" title="Map" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="mapView" destination="ts5-Te-zfF" id="wTc-Et-qEd"/>
+                        <segue destination="6Kv-sE-xfu" kind="show" identifier="showLivability" id="9m9-Zf-UbT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="709" y="129"/>
+        </scene>
+        <!--Livability Table View Controller-->
+        <scene sceneID="Nlg-kF-tZe">
+            <objects>
+                <tableViewController id="6Kv-sE-xfu" customClass="LivabilityTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="qqT-ws-dwc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6zu-dq-cvG">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6zu-dq-cvG" id="JqZ-ZK-8w9">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="6Kv-sE-xfu" id="4Yg-9Q-758"/>
+                            <outlet property="delegate" destination="6Kv-sE-xfu" id="WPq-TL-y3g"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0sh-Y8-brD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1429" y="129"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Nki-YV-4Qg">
