--- a/Liveability/Base.lproj/Main.storyboard
+++ b/Liveability/Base.lproj/Main.storyboard
@@ -130,22 +130,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kKQ-Ns-qsF">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="143" width="600" height="457"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SEIFANational.png" translatesAutoresizingMaskIntoConstraints="NO" id="dgR-ny-swc">
+                                <rect key="frame" x="180" y="72" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="7xN-iL-kPr"/>
+                                    <constraint firstAttribute="height" constant="128" id="hXb-3g-5ph"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xf9-rt-FuN">
+                                <rect key="frame" x="16" y="72" width="568" height="128"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onDataSourceButton:" destination="R2w-NU-PVG" eventType="touchUpInside" id="S0G-tv-NWG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="dgR-ny-swc" firstAttribute="top" secondItem="ocN-9d-7on" secondAttribute="bottom" constant="8" id="Czb-Qi-dHm"/>
                             <constraint firstItem="kKQ-Ns-qsF" firstAttribute="leading" secondItem="97y-mU-dI9" secondAttribute="leadingMargin" constant="-16" id="GgE-Vp-2xK"/>
+                            <constraint firstAttribute="centerX" secondItem="dgR-ny-swc" secondAttribute="centerX" id="JIe-Gp-TQt"/>
                             <constraint firstItem="jis-bc-Q6l" firstAttribute="top" secondItem="kKQ-Ns-qsF" secondAttribute="bottom" id="RP9-U1-QxS"/>
                             <constraint firstAttribute="trailingMargin" secondItem="kKQ-Ns-qsF" secondAttribute="trailing" constant="-16" id="TA0-f2-uPQ"/>
-                            <constraint firstItem="kKQ-Ns-qsF" firstAttribute="top" secondItem="97y-mU-dI9" secondAttribute="topMargin" id="jnr-gz-cPl"/>
+                            <constraint firstItem="kKQ-Ns-qsF" firstAttribute="top" secondItem="dgR-ny-swc" secondAttribute="bottom" constant="-57" id="Vkt-wp-4pP"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="sourceLogoImageView" destination="dgR-ny-swc" id="NGa-aj-zAd"/>
                         <outlet property="textView" destination="kKQ-Ns-qsF" id="gui-RO-WNo"/>
                     </connections>
                 </viewController>
@@ -245,6 +264,9 @@
             <point key="canvasLocation" x="-45" y="129"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SEIFANational.png" width="1032" height="858"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6S0-TO-JiA"/>
     </inferredMetricsTieBreakers>
