--- a/Liveability/Base.lproj/Main.storyboard
+++ b/Liveability/Base.lproj/Main.storyboard
@@ -35,12 +35,17 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ts5-Te-zfF">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                             </mapView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="locationRing.png" translatesAutoresizingMaskIntoConstraints="NO" id="ain-oo-qc5">
+                                <rect key="frame" x="211" y="211" width="178" height="178"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" secondItem="ts5-Te-zfF" secondAttribute="bottom" id="Qek-gh-j23"/>
                             <constraint firstItem="ts5-Te-zfF" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" id="b5Y-yh-sjt"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ts5-Te-zfF" secondAttribute="trailing" constant="-16" id="dqz-kT-yVb"/>
+                            <constraint firstAttribute="centerX" secondItem="ain-oo-qc5" secondAttribute="centerX" id="meP-fg-kMe"/>
+                            <constraint firstAttribute="centerY" secondItem="ain-oo-qc5" secondAttribute="centerY" id="nMj-vg-Tgd"/>
                             <constraint firstItem="ts5-Te-zfF" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" constant="-16" id="yQv-l3-ZY9"/>
                         </constraints>
                     </view>
@@ -266,6 +271,7 @@
     </scenes>
     <resources>
         <image name="SEIFANational.png" width="1032" height="858"/>
+        <image name="locationRing.png" width="178" height="178"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6S0-TO-JiA"/>
