--- a/Liveability/Base.lproj/Main.storyboard
+++ b/Liveability/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ts5-Te-zfF">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                             </mapView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="locationRing.png" translatesAutoresizingMaskIntoConstraints="NO" id="ain-oo-qc5">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="locationRing.png" translatesAutoresizingMaskIntoConstraints="NO" id="ain-oo-qc5">
                                 <rect key="frame" x="211" y="211" width="178" height="178"/>
                             </imageView>
                         </subviews>
@@ -85,7 +85,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nar-eh-XIG">
                                             <rect key="frame" x="531" y="23" width="24" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NetspeedIcon" translatesAutoresizingMaskIntoConstraints="NO" id="XQY-yU-5RY">
@@ -98,7 +98,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FactorLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yeV-zr-1HN">
                                             <rect key="frame" x="64" y="21" width="91.5" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LGA" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CFt-uY-INw">
@@ -154,24 +154,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kKQ-Ns-qsF">
-                                <rect key="frame" x="0.0" y="143" width="600" height="457"/>
+                                <rect key="frame" x="16" y="246" width="568" height="354"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SEIFANational.png" translatesAutoresizingMaskIntoConstraints="NO" id="dgR-ny-swc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SEIFA National.png" translatesAutoresizingMaskIntoConstraints="NO" id="dgR-ny-swc">
                                 <rect key="frame" x="180" y="72" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="7xN-iL-kPr"/>
                                     <constraint firstAttribute="height" constant="128" id="hXb-3g-5ph"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xf9-rt-FuN">
-                                <rect key="frame" x="16" y="72" width="568" height="128"/>
-                                <state key="normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xf9-rt-FuN">
+                                <rect key="frame" x="241.5" y="208" width="118" height="30"/>
+                                <state key="normal" title="Visit Data Source"/>
                                 <connections>
                                     <action selector="onDataSourceButton:" destination="R2w-NU-PVG" eventType="touchUpInside" id="S0G-tv-NWG"/>
                                 </connections>
@@ -179,12 +177,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="centerX" secondItem="xf9-rt-FuN" secondAttribute="centerX" id="0zx-AR-Yx8"/>
                             <constraint firstItem="dgR-ny-swc" firstAttribute="top" secondItem="ocN-9d-7on" secondAttribute="bottom" constant="8" id="Czb-Qi-dHm"/>
-                            <constraint firstItem="kKQ-Ns-qsF" firstAttribute="leading" secondItem="97y-mU-dI9" secondAttribute="leadingMargin" constant="-16" id="GgE-Vp-2xK"/>
+                            <constraint firstItem="kKQ-Ns-qsF" firstAttribute="leading" secondItem="97y-mU-dI9" secondAttribute="leadingMargin" id="GgE-Vp-2xK"/>
+                            <constraint firstItem="xf9-rt-FuN" firstAttribute="top" secondItem="dgR-ny-swc" secondAttribute="bottom" constant="8" id="I2b-nV-o7k"/>
                             <constraint firstAttribute="centerX" secondItem="dgR-ny-swc" secondAttribute="centerX" id="JIe-Gp-TQt"/>
                             <constraint firstItem="jis-bc-Q6l" firstAttribute="top" secondItem="kKQ-Ns-qsF" secondAttribute="bottom" id="RP9-U1-QxS"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="kKQ-Ns-qsF" secondAttribute="trailing" constant="-16" id="TA0-f2-uPQ"/>
-                            <constraint firstItem="kKQ-Ns-qsF" firstAttribute="top" secondItem="dgR-ny-swc" secondAttribute="bottom" constant="-57" id="Vkt-wp-4pP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kKQ-Ns-qsF" secondAttribute="trailing" id="TA0-f2-uPQ"/>
+                            <constraint firstItem="kKQ-Ns-qsF" firstAttribute="top" secondItem="xf9-rt-FuN" secondAttribute="bottom" constant="8" id="lU0-9s-g8O"/>
                         </constraints>
                     </view>
                     <connections>
@@ -290,7 +290,7 @@
     </scenes>
     <resources>
         <image name="NetspeedIcon" width="48" height="48"/>
-        <image name="SEIFANational.png" width="1032" height="858"/>
+        <image name="SEIFA National.png" width="1032" height="858"/>
         <image name="locationRing.png" width="178" height="178"/>
     </resources>
     <inferredMetricsTieBreakers>
